--- a/Laboratory-5-Artificial-Neural-Networks/requirements.txt
+++ b/Laboratory-5-Artificial-Neural-Networks/requirements.txt
@@ -2,5 +2,6 @@ colored==2.2.4
 matplotlib==3.8.3
 numpy==1.26.4
 pandas==2.2.1
-torch==2.2.2
-torchvision==0.17.2
+torch==2.3.0
+torchvision==0.18.0
+ray[tune]==2.11.0
